update 03complete ex

--- a/assignments/DOM Basics/03/index.html
+++ b/assignments/DOM Basics/03/index.html
@@ -58,5 +58,11 @@
    // Select the middle element `li`
    document.body.children[3].childNodes[3];
 
+   // Use the element in 4 and using sibling nodes
+   document.body.children[3].childNodes[3].nextElementSibling.style.backgroundColor="aquamarine";
+   document.body.children[3].childNodes[3].previousElementSibling.style.backgroundColor="coral"
+
+
+
   </script>
 </html>
