--- a/assignments/DOM Basics/04/index.html
+++ b/assignments/DOM Basics/04/index.html
@@ -13,4 +13,13 @@
       <li>Hometown: <span id="hometown"></span></li>
     </ul>
   </body>
+    <script>
+    // body style so it has a font-family of "Arial, sans-serif".
+    document.body.style.fontFamily = "Arial,sans-serif"
+    // a new img element and set its src attribute to a picture
+    var image = document.createElement("img");
+    image.setAttribute("src", "rak.jpg");
+    image.setAttribute("alt", "myimage");
+    document.body.appendChild(image);
+  </script>
 </html>
