--- a/assignments/DOM Basics/04/index.html
+++ b/assignments/DOM Basics/04/index.html
@@ -16,6 +16,12 @@
     <script>
     // body style so it has a font-family of "Arial, sans-serif".
     document.body.style.fontFamily = "Arial,sans-serif"
+
+    document.querySelectorAll("li").className="listitem";
+    var ulList=document.querySelectorAll("li");
+    [...ulList].forEach(function (n) {
+      n.style.color="red"
+    });
     // a new img element and set its src attribute to a picture
     var image = document.createElement("img");
     image.setAttribute("src", "rak.jpg");
