--- a/assignments/events/3. randomQuotes/index.html
+++ b/assignments/events/3. randomQuotes/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Random Quotes</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-</head>
-<body>
-<script src="main.js"></script>
-</body>
+	<head>
+	  <meta charset="utf-8" />
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <title>Random Quotes</title>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	</head>
+	<body>
+		<h1>click for random quotes</h1>
+		<div>
+			<p id="quoteDisplay"></p>
+			<p id="quoteAuthor"></p>
+		</div>
+		<button id="click">Click</button>
+
+
+	<script src="main.js"></script>
+
+	</body>
 </html>
